--- a/gatsby-template/package.json
+++ b/gatsby-template/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -14,7 +16,6 @@
     "typescript": "^4.2.3"
   },
   "license": "MIT",
-  "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
